@@ -5,6 +5,8 @@ Fri Oct 12 14:01:25 CDT 2001  Linas Vepstas <linas@linas.org>
 
         * ctree.c: bugfix: set rational default column widths
 
+        * ctree.c: bugfix: print start, end, due dates correctly
+
 Fri Oct 05 11:20:18 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, journal.c, plug-in.c, prefs.c, props-invl.c,
